--- a/src-tauri/locales/zh-CN.json
+++ b/src-tauri/locales/zh-CN.json
@@ -1,3 +1,44 @@
 {
-    "Frame is not found.": "Frame is not found."
+  "Capturer is running, but no frame was captured.": "屏幕捕获器正在运行，但未捕获到任何帧。",
+  "Failed to acquire config write lock on configuration.": "获取配置写锁失败。(错误:%{error})",
+  "Failed to acquire read lock on configuration.": "获取配置读锁失败。(错误:%{error})",
+  "Failed to acquire read lock on project.": "获取项目读锁失败。(错误:%{error})",
+  "Failed to acquire write lock on project.": "获取项目写锁失败。(错误:%{error})",
+  "Failed to convert RGBA buffer to RGB.": "RGBA 缓冲区转换为 RGB 失败。",
+  "Failed to convert frame to buffer.": "帧图像转换为缓冲区失败。",
+  "Failed to deserialize WebSocket argument.": "WebSocket 参数反序列化失败。(参数:%{argument})(错误:%{error})",
+  "Failed to find HWND by label.": "通过标签查找 HWND 失败。(标签:%{label})(错误:%{error})",
+  "Failed to initialize OCR models from memory.": "从内存初始化 OCR 模型失败。(错误:%{error})",
+  "Failed to initialize Python virtual environment.": "初始化 Python 虚拟环境失败。(错误:%{error})",
+  "Failed to initialize app handle.": "初始化应用句柄失败。",
+  "Failed to initialize resource directory.": "初始化资源目录失败。",
+  "Failed to install the Kiwi module.": "安装 Kiwi 模块失败。(错误:%{error})",
+  "Failed to remove quarantine attribute from Python.": "移除 Python 的隔离属性失败。(错误:%{error})",
+  "Failed to retrieve webview with the specified label.": "获取指定标签的 webview 失败。(标签:%{label})",
+  "Failed to set window display affinity.": "设置窗口捕获属性失败。(错误:%{error})",
+  "Frame not found.": "未找到屏幕捕获帧。",
+  "Height must be greater than zero.": "高度必须大于零。",
+  "Image data directory does not exist.": "图像数据目录不存在。(路径:%{path})(错误:%{error})",
+  "Invalid edit command.": "无效的编辑命令。(命令:%{command})",
+  "No primary display found.": "未找到主显示器。",
+  "OCR session is uninitialized.": "OCR 会话未初始化。",
+  "Project entry file not found.": "项目入口文件未找到。(路径:%{path})(错误:%{error})",
+  "Project not found.": "未找到项目。",
+  "Python interpreter not found.": "未找到 Python 解释器。(路径:%{path})(错误:%{error})",
+  "Python virtual environment config file does not exist.": "Python 虚拟环境配置文件不存在。(路径:%{path})(错误:%{error})",
+  "Template image does not exist.": "模板图像不存在。(路径:%{path})",
+  "The interpreter is not supported.": "不支持该解释器。(解释器:%{interpreter})",
+  "The key is not supported.": "不支持的按键。",
+  "The Python key is not supported.": "不支持的 Python 按键。(按键:%{key})",
+  "The input key is not supported.": "不支持的输入按键。(按键:%{key})",
+  "The record key is not supported.": "不支持的录制按键。",
+  "The template size exceeds the cropped frame size.": "模板尺寸超出裁剪帧尺寸。",
+  "Unable to read the project directory.": "无法读取项目目录。(路径:%{path})",
+  "Unable to start the WebSocket service.": "无法启动 WebSocket 服务。(端口:%{port})(错误:%{error})",
+  "Unsupported button action.": "不支持的按钮操作。",
+  "Unsupported token.": "不支持的标记。",
+  "WebSocket argument is missing.": "缺少 WebSocket 参数。(参数:%{argument})",
+  "Width must be greater than zero.": "宽度必须大于零。",
+  "Invalid pattern: no directory specified.": "无效的模式：未指定目录。",
+  "Invalid pattern: no filename specified.": "无效的模式：未指定文件名。"
 }
