--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -6,5 +6,9 @@
     "WebSocket Port":"WebSocket Port",
     "Save":"Save",
     "Setting": "Setting",
-    "Settings saved successfully.":"Settings saved successfully."
+    "Settings saved successfully.":"Settings saved successfully.",
+    "WebSocket port is required.":"WebSocket port is required.",
+    "WebSocket failed to start, revert to original port.":"WebSocket failed to start on port: {port}, revert to original port {originalPort}.",
+    "WebSocket failed to start on both port and original port.":"WebSocket failed to start on both port: {port} and original port: {originalPort}."
+
 }
