--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -12,5 +12,30 @@
     "WebSocket failed to start on both port and original port.":"WebSocket在端口{port}和原始端口{originalPort}上均启动失败.",
     "Create Project": "创建项目",
     "Open Project": "打开项目",
-    "Version": "版本"
+    "Version": "版本",
+    "Primary Monitor":"主显示器",
+    "Capturing, please wait.":"正在捕获，请稍候。",
+    "Capture":"捕获",
+    "Reset":"重置",
+    "Find Image":"找图",
+    "Find Relative Colors":"找相对色",
+    "Find Colors":"找色",
+    "Recognize Text":"识别文字",
+    "Close":"关闭",
+    "Monitor Size":"显示器尺寸",
+    "Position":"位置",
+    "Begin Point":"起点",
+    "End Point":"终点",
+    "Captured Rect Size":"捕获区域尺寸",
+    "Discovered new version.":"发现新版本: {version}.",
+    "Download Now":"立即下载",
+    "Can only contain Chinese characters, English letters, digits, and underscores.":"只能包含中文、英文字母、数字和下划线。",
+    "Project path is required.":"项目路径是必填项。",
+    "Project is initializing, please wait.":"项目正在初始化，请稍候。",
+    "Project created successfully.":"项目创建成功。",
+    "Project Name":"项目名称",
+    "Programming Language":"编程语言",
+    "Project Path":"项目路径",
+    "Project Folder Name":"项目文件夹名称",
+    "Create":"创建"
 }
