--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -1,43 +1,84 @@
 {
-    "Hands-free, everything on autopilot.":"Hands-free, everything on autopilot.",
-    "Project name is required.":"Project name is required.",
-    "WebSocket started successfully.":"WebSocket started successfully on port: {port}.",
-    "Language":"Language",
-    "WebSocket Port":"WebSocket Port",
-    "Save":"Save",
-    "Setting": "Setting",
-    "Settings saved successfully.":"Settings saved successfully.",
-    "WebSocket port is required.":"WebSocket port is required.",
-    "WebSocket failed to start, revert to original port.":"WebSocket failed to start on port: {port}, revert to original port {originalPort}.",
-    "WebSocket failed to start on both port and original port.":"WebSocket failed to start on both port: {port} and original port: {originalPort}.",
-    "Create Project": "Create Project",
-    "Open Project": "Open Project",
-    "Version": "Version",
-    "Primary Monitor":"Primary Monitor",
-    "Capturing, please wait.":"Capturing, please wait.",
-    "Capture":"Capture",
-    "Reset":"Reset",
-    "Find Image":"Find Image",
-    "Find Relative Colors":"Find Relative Colors",
-    "Find Colors":"Find Colors",
-    "Recognize Text":"Recognize Text",
-    "Close":"Close",
-    "Monitor Size":"Monitor Size",
-    "Position":"Position",
-    "Begin Point":"Begin Point",
-    "End Point":"End Point",
-    "Captured Rect Size":"Captured Rect Size",
-    "Discovered new version.":"Discovered new version: {version}.",
-    "Download Now":"Download Now",
-    "Can only contain Chinese characters, English letters, digits, and underscores.":"Can only contain Chinese characters, English letters, digits, and underscores.",
-    "Project path is required.":"Project path is required.",
-    "Project is initializing, please wait.":"Project is initializing, please wait.",
-    "Project created successfully.":"Project created successfully.",
-    "Project Name":"Project Name",
-    "Programming Language":"Programming Language",
-    "Project Path":"Project Path",
-    "Project Folder Name":"Project Folder Name",
-    "Create":"Create"
-
-
+  "Hands-free, everything on autopilot.": "Hands-free, everything on autopilot.",
+  "Project name is required.": "Project name is required.",
+  "WebSocket started successfully.": "WebSocket started successfully on port: {port}.",
+  "Language": "Language",
+  "WebSocket Port": "WebSocket Port",
+  "Save": "Save",
+  "Setting": "Setting",
+  "Settings saved successfully.": "Settings saved successfully.",
+  "WebSocket port is required.": "WebSocket port is required.",
+  "WebSocket failed to start, revert to original port.": "WebSocket failed to start on port: {port}, revert to original port {originalPort}.",
+  "WebSocket failed to start on both port and original port.": "WebSocket failed to start on both port: {port} and original port: {originalPort}.",
+  "Create Project": "Create Project",
+  "Open Project": "Open Project",
+  "Version": "Version",
+  "Primary Monitor": "Primary Monitor",
+  "Capturing, please wait.": "Capturing, please wait.",
+  "Capture": "Capture",
+  "Reset": "Reset",
+  "Find Image": "Find Image",
+  "Find Relative Colors": "Find Relative Colors",
+  "Find Colors": "Find Colors",
+  "Recognize Text": "Recognize Text",
+  "Close": "Close",
+  "Monitor Size": "Monitor Size",
+  "Position": "Position",
+  "Begin Point": "Begin Point",
+  "End Point": "End Point",
+  "Captured Rect Size": "Captured Rect Size",
+  "Discovered new version.": "Discovered new version: {version}.",
+  "Download Now": "Download Now",
+  "Can only contain Chinese characters, English letters, digits, and underscores.": "Can only contain Chinese characters, English letters, digits, and underscores.",
+  "Project path is required.": "Project path is required.",
+  "Project is initializing, please wait.": "Project is initializing, please wait.",
+  "Project created successfully.": "Project created successfully.",
+  "Project Name": "Project Name",
+  "Programming Language": "Programming Language",
+  "Project Path": "Project Path",
+  "Project Folder Name": "Project Folder Name",
+  "Create": "Create",
+  "Monitor": "Monitor",
+  "Open monitor failed.": "Open monitor failed.",
+  "The project is opening, please wait.": "The project is opening, please wait.",
+  "The project has been moved, and is now being reinitialized. Please wait.": "The project has been moved, and is now being reinitialized. Please wait.",
+  "This is not a valid Kiwi project.": "This is not a valid Kiwi project.",
+  "The project has been reinitialized successfully.": "The project has been reinitialized successfully.",
+  "Hide While Running": "Hide While Running",
+  "Run Project": "Run Project",
+  "Stop All": "Stop All",
+  "Record": "Record",
+  "Open": "Open",
+  "If “Edit” doesn’t work, install VS Code or set “edit_command” manually in config.toml.": "If “Edit” doesn’t work, install VS Code or set “edit_command” manually in config.toml.",
+  "Edit": "Edit",
+  "Relative Path of Current File": "Relative Path of Current File",
+  "Run File": "Run File",
+  "Clear Log": "Clear Log",
+  "The color is already exists.": "The color already exists.",
+  "The colors must not be empty.": "The colors must not be empty.",
+  "Copy succeeded.": "Copy succeeded.",
+  "Copy failed.": "Copy failed. {error}",
+  "Colors": "Colors",
+  "Find Area": "Find Area",
+  "Find": "Find",
+  "Start X": "Start X",
+  "Start Y": "Start Y",
+  "End X": "End X",
+  "End Y": "End Y",
+  "Offset R": "Offset R",
+  "Offset G": "Offset G",
+  "Offset B": "Offset B",
+  "Code": "Code",
+  "Copy": "Copy",
+  "Spaces and backslashes are not allowed.": "Spaces and backslashes are not allowed.",
+  "Result is null.": "Result is null.",
+  "Image Name": "Image Name",
+  "Find One": "Find One",
+  "Find Multiple": "Find Multiple",
+  "Threshold": "Threshold",
+  "Save and Copy": "Save and Copy",
+  "Full Path of Image": "Full Path of Image",
+  "The point already exists.": "The point already exists.",
+  "Peak Point: (x, y)": "Peak Point: ({x}, {y})",
+  "Recognize": "Recognize"
 }
