--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -1,41 +1,84 @@
 {
-    "Hands-free, everything on autopilot.":"解放双手，一切交给Kiwi。",
-    "Project name is required.":"项目名称是必填项。",
-    "WebSocket started successfully.":"WebSocket成功从端口{port}启动.",
-    "Language":"语言",
-    "WebSocket Port":"WebSocket 端口",
-    "Save":"保存",
-    "Setting": "设置",
-    "Settings saved successfully.":"设置已成功保存。",
-    "WebSocket port is required.":"WebSocket 端口是必填项.",
-    "WebSocket failed to start, revert to original port.":"WebSocket在端口{port}启动失败，已恢复到原始端口{originalPort}.",
-    "WebSocket failed to start on both port and original port.":"WebSocket在端口{port}和原始端口{originalPort}上均启动失败.",
-    "Create Project": "创建项目",
-    "Open Project": "打开项目",
-    "Version": "版本",
-    "Primary Monitor":"主显示器",
-    "Capturing, please wait.":"正在捕获，请稍候。",
-    "Capture":"捕获",
-    "Reset":"重置",
-    "Find Image":"找图",
-    "Find Relative Colors":"找相对色",
-    "Find Colors":"找色",
-    "Recognize Text":"识别文字",
-    "Close":"关闭",
-    "Monitor Size":"显示器尺寸",
-    "Position":"位置",
-    "Begin Point":"起点",
-    "End Point":"终点",
-    "Captured Rect Size":"捕获区域尺寸",
-    "Discovered new version.":"发现新版本: {version}.",
-    "Download Now":"立即下载",
-    "Can only contain Chinese characters, English letters, digits, and underscores.":"只能包含中文、英文字母、数字和下划线。",
-    "Project path is required.":"项目路径是必填项。",
-    "Project is initializing, please wait.":"项目正在初始化，请稍候。",
-    "Project created successfully.":"项目创建成功。",
-    "Project Name":"项目名称",
-    "Programming Language":"编程语言",
-    "Project Path":"项目路径",
-    "Project Folder Name":"项目文件夹名称",
-    "Create":"创建"
+  "Hands-free, everything on autopilot.": "解放双手，一切交给Kiwi。",
+  "Project name is required.": "项目名称是必填项。",
+  "WebSocket started successfully.": "WebSocket成功从端口{port}启动.",
+  "Language": "语言",
+  "WebSocket Port": "WebSocket 端口",
+  "Save": "保存",
+  "Setting": "设置",
+  "Settings saved successfully.": "设置已成功保存。",
+  "WebSocket port is required.": "WebSocket 端口是必填项.",
+  "WebSocket failed to start, revert to original port.": "WebSocket在端口{port}启动失败，已恢复到原始端口{originalPort}.",
+  "WebSocket failed to start on both port and original port.": "WebSocket在端口{port}和原始端口{originalPort}上均启动失败.",
+  "Create Project": "创建项目",
+  "Open Project": "打开项目",
+  "Version": "版本",
+  "Primary Monitor": "主显示器",
+  "Capturing, please wait.": "正在捕获，请稍候。",
+  "Capture": "捕获",
+  "Reset": "重置",
+  "Find Image": "找图",
+  "Find Relative Colors": "找相对色",
+  "Find Colors": "找色",
+  "Recognize Text": "识别文字",
+  "Close": "关闭",
+  "Monitor Size": "显示器尺寸",
+  "Position": "位置",
+  "Begin Point": "起点",
+  "End Point": "终点",
+  "Captured Rect Size": "捕获区域尺寸",
+  "Discovered new version.": "发现新版本: {version}.",
+  "Download Now": "立即下载",
+  "Can only contain Chinese characters, English letters, digits, and underscores.": "只能包含中文、英文字母、数字和下划线。",
+  "Project path is required.": "项目路径是必填项。",
+  "Project is initializing, please wait.": "项目正在初始化，请稍候。",
+  "Project created successfully.": "项目创建成功。",
+  "Project Name": "项目名称",
+  "Programming Language": "编程语言",
+  "Project Path": "项目路径",
+  "Project Folder Name": "项目文件夹名称",
+  "Create": "创建",
+  "Monitor": "监视器",
+  "Open monitor failed.": "打开监视器失败。",
+  "The project is opening, please wait.": "项目正在打开，请稍候。",
+  "The project has been moved, and is now being reinitialized. Please wait.": "项目已被移动，正在重新初始化，请稍候。",
+  "This is not a valid Kiwi project.": "这不是一个有效的Kiwi项目。",
+  "The project has been reinitialized successfully.": "项目已成功重新初始化。",
+  "Hide While Running": "运行时隐藏",
+  "Run Project": "运行项目",
+  "Stop All": "全部停止",
+  "Record": "录制",
+  "Open": "打开",
+  "If “Edit” doesn’t work, install VS Code or set “edit_command” manually in config.toml.": "如“编辑”无效，请安装VS Code或在config.toml中手动设置“edit_command”。",
+  "Edit": "编辑",
+  "Relative Path of Current File": "当前文件的相对路径",
+  "Run File": "运行文件",
+  "Clear Log": "清除日志",
+  "The color is already exists.": "该颜色已存在。",
+  "The colors must not be empty.": "颜色不能为空。",
+  "Copy succeeded.": "复制成功。",
+  "Copy failed.": "复制失败。{error}",
+  "Colors": "颜色",
+  "Find Area": "查找区域",
+  "Find": "查找",
+  "Start X": "起始X",
+  "Start Y": "起始Y",
+  "End X": "结束X",
+  "End Y": "结束Y",
+  "Offset R": "R偏移",
+  "Offset G": "G偏移",
+  "Offset B": "B偏移",
+  "Code": "代码",
+  "Copy": "复制",
+  "Spaces and backslashes are not allowed.": "不允许有空格和反斜杠。",
+  "Result is null.": "结果为空。",
+  "Image Name": "图片名称",
+  "Find One": "查找一个",
+  "Find Multiple": "查找多个",
+  "Threshold": "阈值",
+  "Save and Copy": "保存并复制",
+  "Full Path of Image": "图片完整路径",
+  "The point already exists.": "该点已存在。",
+  "Peak Point: (x, y)": "顶点：({x}, {y})",
+  "Recognize": "识别"
 }
