--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -34,7 +34,7 @@
   "Project is initializing, please wait.": "Project is initializing, please wait.",
   "Project created successfully.": "Project created successfully.",
   "Project Name": "Project Name",
-  "Programming Language": "Programming Language",
+  "Script Language": "Script Language",
   "Project Path": "Project Path",
   "Project Folder Name": "Project Folder Name",
   "Create": "Create",
@@ -53,6 +53,7 @@
   "Edit": "Edit",
   "Relative Path of Current File": "Relative Path of Current File",
   "Run File": "Run File",
+  "Log": "Log",
   "Clear Log": "Clear Log",
   "The color is already exists.": "The color already exists.",
   "The colors must not be empty.": "The colors must not be empty.",
