--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -34,7 +34,7 @@
   "Project is initializing, please wait.": "项目正在初始化，请稍候。",
   "Project created successfully.": "项目创建成功。",
   "Project Name": "项目名称",
-  "Programming Language": "编程语言",
+  "Script Language": "脚本语言",
   "Project Path": "项目路径",
   "Project Folder Name": "项目文件夹名称",
   "Create": "创建",
@@ -53,6 +53,7 @@
   "Edit": "编辑",
   "Relative Path of Current File": "当前文件的相对路径",
   "Run File": "运行文件",
+  "Log": "日志",
   "Clear Log": "清除日志",
   "The color is already exists.": "该颜色已存在。",
   "The colors must not be empty.": "颜色不能为空。",
