--- a/src-tauri/locales/en-US.json
+++ b/src-tauri/locales/en-US.json
@@ -1,44 +1,54 @@
 {
-    "Capturer is running, but no frame was captured.":"Capturer is running, but no frame was captured.",
-    "Failed to acquire config write lock on configuration.":"Failed to acquire config write lock on configuration. (error:%{error})",
-    "Failed to acquire read lock on configuration.":"Failed to acquire read lock on configuration. (error:%{error})",
-    "Failed to acquire read lock on project.":"Failed to acquire read lock on project. (error:%{error})",
-    "Failed to acquire write lock on project.":"Failed to acquire write lock on project. (error:%{error})",
-    "Failed to convert RGBA buffer to RGB.":"Failed to convert RGBA buffer to RGB.",
-    "Failed to convert frame to buffer.":"Failed to convert frame to buffer.",
-    "Failed to deserialize WebSocket argument.":"Failed to deserialize WebSocket argument. (argument:%{argument})(error:%{error})",
-    "Failed to find HWND by label.":"Failed to find HWND by label. (label:%{label})(error:%{error})",
-    "Failed to initialize OCR models from memory.":"Failed to initialize OCR models from memory. (error:%{error})",
-    "Failed to initialize Python virtual environment.":"Failed to initialize Python virtual environment. (error:%{error})",
-    "Failed to initialize app handle.":"Failed to initialize app handle.",
-    "Failed to initialize resource directory.":"Failed to initialize resource directory.",
-    "Failed to install the Kiwi module.":"Failed to install the Kiwi module. (error:%{error})",
-    "Failed to remove quarantine attribute from Python.":"Failed to remove quarantine attribute from Python. (error:%{error})",
-    "Failed to retrieve webview with the specified label.":"Failed to retrieve webview with the specified label. (label:%{label})",
-    "Failed to set window display affinity.":"Failed to set window display affinity. (error:%{error})",
-    "Frame not found.":"Frame not found.",
-    "Height must be greater than zero.":"Height must be greater than zero.",
-    "Image data directory does not exist.":"Image data directory does not exist. (path:%{path})(error:%{error})",
-    "Invalid edit command.":"Invalid edit command. (command:%{command})",
-    "No primary display found.":"No primary display found.",
-    "OCR session is uninitialized.":"OCR session is uninitialized.",
-    "Project entry file not found.":"Project entry file not found. (path:%{path})(error:%{error})",
-    "Project not found.":"Project not found.",
-    "Python interpreter not found.":"Python interpreter not found. (path:%{path})(error:%{error})",
-    "Python virtual environment config file does not exist.":"Python virtual environment config file does not exist. (path:%{path})(error:%{error})",
-    "Template image does not exist.":"Template image does not exist. (path:%{path})",
-    "The interpreter is not supported.":"The interpreter is not supported. (interpreter:%{interpreter})",
-    "The key is not supported.":"The key is not supported.",
-    "The Python key is not supported.":"The Python key is not supported. (key:%{key})",
-    "The input key is not supported.":"The input key is not supported. (key:%{key})",
-    "The record key is not supported.":"The record key is not supported.",
-    "The template size exceeds the cropped frame size.":"The template size exceeds the cropped frame size.",
-    "Unable to read the project directory.":"Unable to read the project directory. (path:%{path})",
-    "Unable to start the WebSocket service.":"Unable to start the WebSocket service. (port:%{port})(error:%{error})",
-    "Unsupported button action.":"Unsupported button action.",
-    "Unsupported token.":"Unsupported token.",
-    "WebSocket argument is missing.":"WebSocket argument is missing. (argument:%{argument})",
-    "Width must be greater than zero.":"Width must be greater than zero.",
-    "Invalid pattern: no directory specified.":"Invalid pattern: no directory specified.",
-    "Invalid pattern: no filename specified.":"Invalid pattern: no filename specified."
+  "Capturer is running, but no frame was captured.": "Capturer is running, but no frame was captured.",
+  "Failed to acquire config write lock on configuration.": "Failed to acquire config write lock on configuration. (error:%{error})",
+  "Failed to acquire read lock on configuration.": "Failed to acquire read lock on configuration. (error:%{error})",
+  "Failed to acquire read lock on project.": "Failed to acquire read lock on project. (error:%{error})",
+  "Failed to acquire write lock on project.": "Failed to acquire write lock on project. (error:%{error})",
+  "Failed to convert RGBA buffer to RGB.": "Failed to convert RGBA buffer to RGB.",
+  "Failed to convert frame to buffer.": "Failed to convert frame to buffer.",
+  "Failed to deserialize WebSocket argument.": "Failed to deserialize WebSocket argument. (argument:%{argument})(error:%{error})",
+  "Failed to find HWND by label.": "Failed to find HWND by label. (label:%{label})(error:%{error})",
+  "Failed to initialize OCR models from memory.": "Failed to initialize OCR models from memory. (error:%{error})",
+  "Failed to initialize Python virtual environment.": "Failed to initialize Python virtual environment. (error:%{error})",
+  "Failed to initialize app handle.": "Failed to initialize app handle.",
+  "Failed to initialize resource directory.": "Failed to initialize resource directory.",
+  "Failed to install the Kiwi module.": "Failed to install the Kiwi module. (error:%{error})",
+  "Failed to remove quarantine attribute from Python.": "Failed to remove quarantine attribute from Python. (error:%{error})",
+  "Failed to retrieve webview with the specified label.": "Failed to retrieve webview with the specified label. (label:%{label})",
+  "Failed to set window display affinity.": "Failed to set window display affinity. (error:%{error})",
+  "Frame not found.": "Frame not found.",
+  "Height must be greater than zero.": "Height must be greater than zero.",
+  "Image data directory does not exist.": "Image data directory does not exist. (path:%{path})(error:%{error})",
+  "Invalid edit command.": "Invalid edit command. (command:%{command})",
+  "No primary display found.": "No primary display found.",
+  "OCR session is uninitialized.": "OCR session is uninitialized.",
+  "Project entry file not found.": "Project entry file not found. (path:%{path})(error:%{error})",
+  "Project not found.": "Project not found.",
+  "Python interpreter not found.": "Python interpreter not found. (path:%{path})(error:%{error})",
+  "Python virtual environment config file does not exist.": "Python virtual environment config file does not exist. (path:%{path})(error:%{error})",
+  "Template image does not exist.": "Template image does not exist. (path:%{path})",
+  "The interpreter is not supported.": "The interpreter is not supported. (interpreter:%{interpreter})",
+  "The key is not supported.": "The key is not supported.",
+  "The Python key is not supported.": "The Python key is not supported. (key:%{key})",
+  "The input key is not supported.": "The input key is not supported. (key:%{key})",
+  "The record key is not supported.": "The record key is not supported.",
+  "The template size exceeds the cropped frame size.": "The template size exceeds the cropped frame size.",
+  "Unable to read the project directory.": "Unable to read the project directory. (path:%{path})",
+  "Unable to start the WebSocket service.": "Unable to start the WebSocket service. (port:%{port})(error:%{error})",
+  "Unsupported button action.": "Unsupported button action.",
+  "Unsupported token.": "Unsupported token.",
+  "WebSocket argument is missing.": "WebSocket argument is missing. (argument:%{argument})",
+  "Width must be greater than zero.": "Width must be greater than zero.",
+  "Invalid pattern: no directory specified.": "Invalid pattern: no directory specified.",
+  "Invalid pattern: no filename specified.": "Invalid pattern: no filename specified.",
+
+  "No script is currently running.": "No script is currently running.",
+  "Screen capture is still running, please wait a moment.": "Screen capture is still running, please wait a moment.",
+  "The recorder is now running.": "The recorder is now running.",
+  "Invalid file name.": "Invalid file name.",
+  "Failed to create project directory.": "Failed to create project directory. (path:%{path})(error:%{error})",
+  "Create folder failed.": "Create folder failed. (path:%{path})(error:%{error})",
+  "Can't open image.": "Can't open image. (path:%{path})",
+  "Screen capture is still running. Please wait a moment.": "Screen capture is still running. Please wait a moment.",
+  "The recorder is running. Please stop it first.": "The recorder is running. Please stop it first."
 }
