--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -1,5 +1,5 @@
 {
-  "Hands-free, everything on autopilot.": "Hands-free, everything on autopilot.",
+  "Simplifying your tasks, one click at a time.": "Simplifying your tasks, one click at a time.",
   "Project name is required.": "Project name is required.",
   "WebSocket started successfully.": "WebSocket started successfully on port: {port}.",
   "Language": "Language",
