--- a/src/locales/zh-CN.json
+++ b/src/locales/zh-CN.json
@@ -1,5 +1,5 @@
 {
-  "Hands-free, everything on autopilot.": "解放双手，一切交给Kiwi。",
+  "Simplifying your tasks, one click at a time.": "一键简化你的任务.",
   "Project name is required.": "项目名称是必填项。",
   "WebSocket started successfully.": "WebSocket成功从端口{port}启动.",
   "Language": "语言",
